# opentq

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: qwen36_benchmark_matrix.json  qwen36_long_running_benchmark_matrix.json  qwen36_official_language_baseline.json  qwen36_quality_samples.jsonl  qwen36_release_extended_samples.jsonl
docs/: 2026-04-sota.md  allocation-ui.md  architecture.md  cookbook.md  dynamic-compatible-gguf.md  inference-release-checklist.md  llama-cpp-plan.md  llm-benchmark-protocol.md  native-opentq-runtime.md  otq-packed-metal-release-plan.md  qwen3.6-27b-release-plan.md  qwen36-benchmark-representativeness.md  qwen36-disk-cleanup-arbitrage.md  qwen36-long-running-todo.md  qwen36-overnight-todo.md  qwen36-release-status-2026-04-29.md  release-todo.md  variants.md
policies/: README.md  qwen36-custom-dyn-q4.yaml
scripts/: __init__.py  audit_qwen36_release_state.py  benchmark_llama_wallclock.sh  build_qwen36_cleanup_manifest.py  build_qwen36_degradation_report.py  build_qwen36_paired_quality_report.py  build_qwen36_release_report.py  eval_qwen36_gguf_quality.sh  export_qwen36_gguf_releases.sh  launch_qwen36_bf16_paired_quality.sh  launch_qwen36_dynamic_ggufs.sh  launch_qwen36_dynamic_release.sh  launch_qwen36_gguf_exports.sh  launch_qwen36_hf_bf16_sidecar_smoke.sh  launch_qwen36_overnight_remaining.sh  launch_qwen36_publication_candidate_benchmarks.sh  launch_qwen36_quantizations.sh  launch_qwen36_representative_benchmarks.sh  launch_qwen36_research_ui_after_overnight.sh  pack_qwen36_releases.sh  plan_qwen36_dynamic_ggufs.sh  qwen36_dynamic_common.sh  release_qwen36_dynamic_gguf.sh  run_qwen36_benchmark_subsets.py  run_qwen36_bf16_paired_quality.sh  run_qwen36_comparison_eval.sh  run_qwen36_dynamic_ggufs.sh  run_qwen36_hf_bf16_sidecar.py  run_qwen36_metal_matrix.sh  run_qwen36_native_runtime_gates.sh  run_qwen36_otq_eval.sh  run_qwen36_overnight_native.sh  run_qwen36_overnight_remaining.sh  run_qwen36_overnight_research_ui.sh  (+14 more)
(+75 files in other folders)
